# Spreadsheet-program-in-Rust

./: .gitignore  Cargo.toml  Makefile  README.md  sheet  tarpaulin-report.html
.github/workflows/: coverage.yml  lint.yml  test.yml
report/: report.aux  report.out  report.tex
spreadsheet_ui/: Cargo.toml
spreadsheet_ui/client/: Cargo.toml
spreadsheet_ui/client/src/: api.rs  lib.rs
spreadsheet_ui/client/src/components/: cell.rs  mod.rs  spreadsheet.rs  status_bar.rs  toolbar.rs
spreadsheet_ui/core/: Cargo.toml
spreadsheet_ui/core/src/: lib.rs  spreadsheet.rs
spreadsheet_ui/server/: Cargo.toml
spreadsheet_ui/server/src/: handlers.rs  main.rs  models.rs  storage.rs
spreadsheet_ui/server/static/: index.html  loader.js  styles.css
src/: main  main.rs
tests/: basic.rs
