[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3", features = ["HtmlInputElement", "FileReader", "Blob", "Window", "Response", "Request", "RequestInit", "RequestMode", "Headers", "console"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
gloo-net = "0.4"
gloo-utils = { version = "0.2", features = ["serde"] }
wasm-bindgen-futures = "0.4"
spreadsheet_core = { path = "../core", package = "core", features = ["wasm"] }