[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "tls"] }
rocket_db_pools = { version = "0.2.0-rc.3", features = ["sqlx_sqlite"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-tungstenite = "0.19"
uuid = { version = "1.0", features = ["v4"] }
# Include the core crate from your project
core = { path = "../core" }